--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@material-tailwind/react": "^2.1.10",
         "flowbite": "^3.1.2"
     }
 }
