--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@material-tailwind/react": "^2.1.10",
-        "flowbite": "^3.1.2"
+        "flowbite": "^3.1.2",
+        "swiper": "^11.2.7"
     }
 }
