--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tanstack/react-table": "^8.21.3",
         "@tinymce/tinymce-react": "^6.2.1",
         "flowbite": "^3.1.2",
+        "react-select": "^5.10.1",
         "swiper": "^11.2.7"
     }
 }
