--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@mui/icons-material": "^7.1.0",
         "@mui/material": "^7.1.0",
         "@mui/x-data-grid": "^8.5.0",
+        "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-slot": "^1.2.3",
         "@tanstack/react-table": "^8.21.3",
         "@tinymce/tinymce-react": "^6.2.1",
