--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@mui/x-data-grid": "^8.5.0",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.12",
         "@tanstack/react-table": "^8.21.3",
         "@tinymce/tinymce-react": "^6.2.1",
         "class-variance-authority": "^0.7.1",
