--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "clsx": "^2.1.1",
         "flowbite": "^3.1.2",
         "lucide-react": "^0.515.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-select": "^5.10.1",
         "swiper": "^11.2.7",
         "tailwind-merge": "^3.3.1",
