--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.12",
+        "@radix-ui/react-toast": "^1.2.14",
         "@tanstack/react-table": "^8.21.3",
         "@tinymce/tinymce-react": "^6.2.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "flowbite": "^3.1.2",
         "lucide-react": "^0.515.0",
         "react-beautiful-dnd": "^13.1.1",
+        "react-day-picker": "^9.7.0",
         "react-select": "^5.10.1",
         "swiper": "^11.2.7",
         "tailwind-merge": "^3.3.1",
